--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       <h3>Home</h3>
       <br>
 		
-      <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex system-wide quality issues related to security, usability, reliability among others that arise from long-term maintenance efforts, while promoting effective empirical methodologies to enhance software quality. You can learn more about my research by reading my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>. 
+      <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. My research centers on detecting quality-related bugs, and I create tools and techniques to improve and contextualize the understanding of complex, system-wide quality issues such as security, usability, and reliability stemming from long-term maintenance efforts.</p>
+
+       <p>Additionally, I promote robust and effective empirical methodologies to enhance software quality. To learn more about my research, you can explore my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>.</p> 
 
 
       <p>Prior to joining UNC Charlotte, I taught Computer Science courses at various institutions, covering both undergraduate and graduate levels. I also worked in industry as a senior Java developer for over three years, contributing to the development and maintenance of various web-based applications.</p>
