--- a/research/current_past_projects.html
+++ b/research/current_past_projects.html
@@ -9,7 +9,7 @@
 <div id="wrap">
   <div class="header">
     <h1 style="margin-left: -10px; width: 1200px;"><a style="text-decoration:none;"
-              href="mailto:rrezarta.krasniqi@uncc.edu" title="rrezarta_krasniqi_email" target="_blank">Rrezarta Krasniqi, Ph.D.</a></h1>
+              href="mailto:rrezarta.krasniqi@charlotte.edu" title="rrezarta_krasniqi_email" target="_blank">Rrezarta Krasniqi, Ph.D.</a></h1>
     <h3 style="margin-left: -0px;">Department of Software and Information Systems</h3>
     <h3 style="margin-left: -0px;">University of North Carolina at Charlotte</h3>
   </div>
