--- a/research/current_projects/case_study_quality_concerns.html
+++ b/research/current_projects/case_study_quality_concerns.html
@@ -10,7 +10,7 @@
 <div id="wrap">
   <div class="header">
     <h1 style="margin-left: -10px; width: 1200px;"><a target="_blank" title="rrezarta_krasniqi_email"
-            href="mailto:rrezarta.krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
+            href="mailto:rrezarta.krasniqi@charlotte.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
     <h3 style="margin-left: -0px;">Department of Software and Information Systems</h3>
     <h3 style="margin-left: -0px;">University of North Carolina at Charlotte</h3>
   </div>
