--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="wrap">
   <div class="header">
     <h1 style="margin-left: -10px; width: 1200px;"><a target="_blank" title="rrezarta_krasniqi_email"
-            href="mailto:rrezarta.krasniqi@uncc.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
+            href="mailto:rrezarta.krasniqi@charlotte.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
     <h3 style="margin-left: 0px; width: 1096px;">Department of Software and Information Systems</h3>
     <h3 style="margin-left: -0px;">University of North Carolina at Charlotte</h3>
   </div>
@@ -68,7 +68,7 @@
         <p class="blocktext"><a href="index.html" title="Rrezarta Krasniqi">
 			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
         <p class="blocktext">Assistant Professor of Software Engineering</p>
-        <p class="blocktext"><strong>E-mail</strong>: rrezarta.krasniqi@uncc.edu<br>
+        <p class="blocktext"><strong>E-mail</strong>: rrezarta.krasniqi@charlotte.edu<br>
         <strong>Office</strong>: Woodward, 333G</p>
      
       <p class="blocktext">
