--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
         <p class="blocktext"><a href="index.html" title="Rrezarta Krasniqi">
 			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
         <p class="blocktext">Assistant Professor of Software Engineering</p>
-        <p class="blocktext"><strong>E-mail</strong>: rrezarta.krasniqi@charlotte.edu<br>
-        <strong>Office</strong>: Woodward, 333G</p>
-     
+      <p class="blocktext">
+          <strong>E-mail</strong>: rrezarta.krasniqi@charlotte.edu<br>
+          <strong>Office Phone</strong>: (704) 687-7831<br>
+          <strong>Office</strong>: Woodward, 333G</p>
+      <p class="blocktext">
+
       <p class="blocktext">
         <a title="GoogleScholar Account" target="_blank" href="https://scholar.google.com/citations?hl=en&user=r_Wi0GYAAAAJ&view_op=list_works&sortby=pubdate">
         <img alt="Google" src="images/google_scholar_logo.png" style="margin-right: -6px; width: 29px; height: 29px;"/></a> 
