--- a/awards/awards.html
+++ b/awards/awards.html
@@ -18,27 +18,27 @@
   <div id="nav">
     <ul>
       <li class="selected"><a target="_top" title="home" href="../index.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Home</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Home</span></a></li>
 		
       <li class="selected"><a target="_top" title="research" href="../research/current_past_projects.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
 		
       <li class="selected"><a target="_top" title="publications" href="../publications/all_publications.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
 		
       <li class="selected"><a target="_top" title="teaching" href="../teaching/teaching.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
 		
       <li class="selected"><a target="_top" title="awards" href="../awards/awards.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
 		
       <li class="selected"><a target="_top" title="service" href="../service/service.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
 		
       <li class="selected"><a target="_top" title="talks" href="../talks/talks.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../cv/krasniqi_cv.pdf" title="Rrezarta Krasniqi-CV" target="_blank"><span>CV</span></a></li>
     </ul>
   </div>
@@ -47,14 +47,14 @@
 		
       <h3>Awards</h3><br>
 		
-      <strong><font color="92150F">Research Grants</font></strong><br><br>
+      <strong><font color="005035">Research Grants</font></strong><br><br>
 		
       <ul>
         <li><em>Doctoral Research Support Grant</em>, The Toulouse Graduate School, University of North Texas (2023)</li>
         <li><em>Women in STEM Grant</em>, Women and Hi Tech (2019)</li>
       </ul>
 		
-      <strong><font color="92150F">Travel Grants</font></strong><br><br>
+      <strong><font color="005035">Travel Grants</font></strong><br><br>
 		
       <ul>
         <li><em>CSE Travel Grant</em>, UNT Department of Computer Science (2023)</li>
@@ -67,7 +67,7 @@
         <li><em>CRA-W Travel Grant</em>, Grad Cohort Workshop for Women (2019)</li>
       </ul>
 		
-      <strong><font color="92150F">Honors and Awards</font></strong><br><br>
+      <strong><font color="005035">Honors and Awards</font></strong><br><br>
 		
       <ul>
         <li><em>Tuition Benefit Program Award</em>, University of North Texas (2021-2024)</li>
@@ -83,7 +83,7 @@
         <li><em>Outstanding Graduate Woman</em>, Midwestern State University (2008)</li>
       </ul>
 		
-      <strong><font color="92150F">Scholarships and Fellowships</font></strong><br><br>
+      <strong><font color="005035">Scholarships and Fellowships</font></strong><br><br>
 		
       <ul>
         <li><em>Graduate Teaching Assistantship</em>, University of North Texas (2021-2024)</li>
