--- a/publications/all_publications.html
+++ b/publications/all_publications.html
@@ -17,28 +17,28 @@
   </div>
   <div id="nav">
     <ul>
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../index.html" title="home" target="_top"><span>Home</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../research/current_past_projects.html" title="research" target="_top"><span>Research</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="all_publications.html" title="publications" target="_top"><span>Publications</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../teaching/teaching.html" title="teaching" target="_top"><span>Teaching</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../awards/awards.html" title="awards" target="_top"><span>Awards</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../service/service.html" title="service" target="_top"><span>Service</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../talks/talks.html" title="talks" target="_top"><span>Talks</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../cv/krasniqi_cv.pdf" title="Rrezarta Krasniqi-CV" target="_blank"><span>CV</span></a></li>
     </ul>
   </div>
