--- a/research/past_projects/quality_concern_bug_report_classifier_tool.html
+++ b/research/past_projects/quality_concern_bug_report_classifier_tool.html
@@ -17,28 +17,28 @@
   <div id="nav">
     <ul>
       <li class="selected"><a target="_top" title="home" href="../../index.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Home</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Home</span></a></li>
 		
       <li class="selected"><a target="_top" title="research" href="../../research/current_past_projects.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
 		
       <li class="selected"><a target="_top" title="publications" href="../../publications/all_publications.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
 		
       <li class="selected"><a target="_top" title="teaching" href="../../teaching/teaching.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
 		
       <li class="selected"><a target="_top" title="awards" href="../../awards/awards.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
 		
       <li class="selected"><a target="_top" title="service" href="../../service/service.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
 		
       <li class="selected"><a target="_top" title="talks" href="../../talks/talks.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
 		
       <li class="selected"><a target="_blank" title="Rrezarta Krasniqi-CV" href="../../cv/krasniqi_cv.pdf"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>CV</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>CV</span></a></li>
     </ul>
   </div>
   <div class="page">
