--- a/service/service.html
+++ b/service/service.html
@@ -17,27 +17,27 @@
   <div id="nav">
     <ul>
       <li class="selected"><a target="_top" title="home" href="../index.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Home</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Home</span></a></li>
 		
       <li class="selected"><a target="_top" title="research" href="../research/current_past_projects.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
 		
       <li class="selected"><a target="_top" title="publications" href="../publications/all_publications.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
 		
       <li class="selected"><a target="_top" title="teaching" href="../teaching/teaching.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
 		
       <li class="selected"><a target="_top" title="awards" href="../awards/awards.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
 		
       <li class="selected"><a target="_top" title="service" href="../service/service.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
 		
       <li class="selected"><a target="_top" title="talks" href="../talks/talks.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../cv/krasniqi_cv.pdf" title="Rrezarta Krasniqi-CV" target="_blank"><span>CV</span></a></li>
     </ul>
   </div>
@@ -46,7 +46,7 @@
       
 	  <h3>Service</h3><br>
 		
-      <strong><font color="92150F">Invited Journal Reviewer</font></strong><br><br>
+      <strong><font color="005035">Invited Journal Reviewer</font></strong><br><br>
 		
       <ul>
         <li><em>Reviewer</em>, Software Quality Journal</li>
@@ -54,9 +54,10 @@
         <li><em>Reviewer</em>, Journal for Software: Testing Verification and Reliability</li>
       </ul>
 		
-      <strong><font color="92150F">Invited Program Committee</font></strong><br><br>
+      <strong><font color="005035">Invited Program Committee</font></strong><br><br>
 		
       <ul>
+		<li><em>PC Member (Research Track)</em>, International Conference on Software Architecture (ICSA'24)</li>
         <li><em>PC Member (Artifact Evaluation Track)</em>, International Conference on Software Engineering (ICSE'24)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'24)</li>
         <li><em>PC Member (Tool Demonstration Track)</em>, International Joint Conference (ISSTA'24/ECOOP'24)</li>
@@ -66,7 +67,7 @@
         <li><em>PC Member (Junior PC Track)</em>, International Conference on Mining Software Repositories (MSR'22, MSR'23)</li>
       </ul>
 		
-      <strong><font color="92150F">Invited Organizing Committee</font></strong><br><br>
+      <strong><font color="005035">Invited Organizing Committee</font></strong><br><br>
 		
       <ul>
         <li><em>Tool and Demo Track Chair</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'25)</li>
@@ -74,7 +75,7 @@
         <li><em>Virtualization Chair</em>, International Conference on Automated Software Test (AST'22)</li>
       </ul>
 		
-      <strong><font color="92150F">Invited External Review Committee</font></strong><br><br>
+      <strong><font color="005035">Invited External Review Committee</font></strong><br><br>
 		
       <ul>
         <li><em>Reviewer</em>, NCWIT Aspirations in Computing (AiC) (NCWIT'23)</li>
@@ -82,14 +83,14 @@
         <li><em>Reviewer</em>, Graduate Women in Science National Fellowship (GWIS) (2020-2022)</li>
       </ul>
 		
-      <strong><font color="92150F">Invited Student Volunteer</font></strong><br><br>
+      <strong><font color="005035">Invited Student Volunteer</font></strong><br><br>
 		
       <ul>
         <li><em>Student Volunteer</em>, International Conference on Software Architecture (ICSA'22)</li>
         <li><em>Student Volunteer Chair</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'21)</li>
       </ul>
 		
-      <strong><font color="92150F">Outreach and Leadership</font></strong><br><br>
+      <strong><font color="005035">Outreach and Leadership</font></strong><br><br>
 		
       <ul>
         <li><em>Student Volunteer</em>, Texas CSTA Chapters Conference and Digital Divas, UNT (2021-2023)</li>
@@ -99,14 +100,14 @@
         <li><em>STEM Volunteer</em>, Math, Science and U Junior High School Conference for Girls (MWSU) (2007-2009)</li>
       </ul>
 		
-      <strong><font color="92150F">Professional Memberships</font></strong><br><br>
+      <strong><font color="005035">Professional Memberships</font></strong><br><br>
 		
       <ul>
         <li>Institute of Electrical and Electronics Engineers (IEEE)</li>
         <li>Association for Computing Machinery (ACM)</li>
       </ul>
 		
-      <strong><font color="92150F">Academic Memberships</font></strong><br><br>
+      <strong><font color="005035">Academic Memberships</font></strong><br><br>
 		
       <ul>
         <li>Society of Women Engineers (SWE-UNT)</li>
