--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -17,28 +17,28 @@
 	
   <div style="width: 1161px;" id="nav">
     <ul>
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../index.html" title="home" target="_top"><span>Home</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../research/current_past_projects.html" title="research" target="_top"><span>Research</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../publications/all_publications.html" title="publications" target="_top"><span>Publications</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../teaching/teaching.html" title="teaching" target="_top"><span>Teaching</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../awards/awards.html" title="awards" target="_top"><span>Awards</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../service/service.html" title="service" target="_top"><span>Service</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../talks/talks.html" title="talks" target="_top"><span>Talks</span></a></li>
 		
-      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a onmouseover="this.style.color='#000'" onmouseout="this.style.color='#005035'"
               href="../cv/krasniqi_cv.pdf" title="Rrezarta Krasniqi-CV" target="_blank"><span>CV</span></a></li>
     </ul>
   </div>
@@ -49,7 +49,7 @@
     <h3>Teaching</h3><br>
 
     <strong>Current Courses @ University of North Carolina at Charlotte</strong><br><br>
-    <strong><font color="92150F">Instructor</font></strong><br><br>
+    <strong><font color="005035">Instructor</font></strong><br><br>
     
       <ul>
         <li>
@@ -72,7 +72,7 @@
 
 
 	  <strong>Past Courses @ University of North Texas</strong><br><br>
-    <strong><font color="92150F">Teaching Fellow</font></strong><br><br>
+    <strong><font color="005035">Teaching Fellow</font></strong><br><br>
 		
       <ul>
         <li>
@@ -119,7 +119,7 @@
         </li>
       </ul>
 		
-      <strong><font color="92150F">Teaching Assistant</font></strong><br><br>
+      <strong><font color="005035">Teaching Assistant</font></strong><br><br>
 		
       <ul>
         <li>
@@ -213,7 +213,7 @@
       </ul>
 		
       <strong>Past Courses @ University of Notre Dame</strong><br><br>
-      <strong><font color="92150F">Teaching Assistant</font></strong><br><br>
+      <strong><font color="005035">Teaching Assistant</font></strong><br><br>
 		
       <ul>
         <li>
@@ -247,7 +247,7 @@
       </ul>
 		
       <strong>Past Courses @ Texas Tech University</strong><br><br>
-      <strong><font color="92150F">Instructor</font></strong><br>
+      <strong><font color="005035">Instructor</font></strong><br>
 		
       <br>
       <ul>
@@ -314,7 +314,7 @@
       </ul>
 		
       <strong>Past Courses @ Rochester Institute of Technology (AUK)</strong><br><br>
-      <strong><font color="92150F">Instructor</font></strong><br><br>
+      <strong><font color="005035">Instructor</font></strong><br><br>
 		
       <ul>
         <li>
@@ -367,7 +367,7 @@
       </ul>
 		
       <strong>Past Courses @ Midwestern State University</strong><br><br>
-      <strong><font color="92150F">Teaching Assistant</font></strong><br><br>
+      <strong><font color="005035">Teaching Assistant</font></strong><br><br>
 		
       <ul>
         <li>
@@ -430,7 +430,7 @@
       </ul>
 		
       <strong>Invited Guest Lecturer</strong><br><br>
-      <strong><font color="92150F">University of North Texas</font></strong><br><br>
+      <strong><font color="005035">University of North Texas</font></strong><br><br>
 		
       <ul>
         <li>Course Title-CSCE3444: Software Engineering, Summer 2022<br>
@@ -441,7 +441,7 @@
         <li>Course Title-CSCE3444: Software Engineering, Summer 2021<br>
           <i>Lecture Title</i>-<em>The Interplay between Functional and Non-Functional Requirements</em></li>
       </ul>
-      <strong><font color="92150F">University of Notre Dame</font></strong><br><br>
+      <strong><font color="005035">University of Notre Dame</font></strong><br><br>
 		
       <ul>
         <li><i>Course Title</i>-CSE40793: Software Development Practices, Fall 2020<br>
@@ -451,7 +451,7 @@
           <i>Lecture Title</i>-<em>The Model-Driven Test Design Process</em></li>
       </ul>
 		
-      <strong><font color="92150F">Texas Tech University</font></strong><br><br>
+      <strong><font color="005035">Texas Tech University</font></strong><br><br>
 		
       <ul>
         <li><i>Course Title</i>-CS4365: Software Engineering II, Fall 2015<br>
