--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
 
   <div id="nav">
     <ul>
-      <li class="selected"><a target="_top" title="home" href="index.html" onmouseout="this.style.color='#92150F'"
+      <li class="selected"><a target="_top" title="home" href="index.html" onmouseout="this.style.color='#005035'"
       onmouseover="this.style.color='#000'"><span>Home</span></a></li>
 		
       <li class="selected"><a target="_top" title="research" href="research/current_past_projects.html"
-      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
+      onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
 		
       <li class="selected"><a target="_top" title="publications" href="publications/all_publications.html"
-      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
+      onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
 		
       <li class="selected"><a target="_top" title="teaching" href="teaching/teaching.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
+              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
 		
       <li class="selected"><a target="_top" title="awards" href="awards/awards.html"
-      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
+      onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
 		
       <li class="selected"><a target="_top" title="service" href="service/service.html"
-      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
+      onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
 		
       <li class="selected"><a target="_top" title="talks" href="talks/talks.html"
-      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
+      onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
 		
       <li class="selected"><a target="_blank" title="Rrezarta Krasniqi-CV" href="cv/krasniqi_cv.pdf"
-      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>CV</span></a></li>
+      onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>CV</span></a></li>
     </ul>
   </div>
 
@@ -66,35 +66,35 @@
       <div class="title"><h4 align="center">Contact Information</h4></div>
 
         <p class="blocktext"><a href="index.html" title="Rrezarta Krasniqi">
-			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
-        <p class="blocktext">Assistant Professor of Software Engineering</p>
+			<img src="images/krasniqi_rrezarta_cropped.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
+       <p class="blocktext">Assistant Professor of Software Engineering</p>
       <p class="blocktext">
           <strong>E-mail</strong>: rrezarta.krasniqi@charlotte.edu<br>
           <strong>Office Phone</strong>: (704) 687-7831<br>
           <strong>Office</strong>: Woodward, 333G</p>
       <p class="blocktext">
-
+     
       <p class="blocktext">
         <a title="GoogleScholar Account" target="_blank" href="https://scholar.google.com/citations?hl=en&user=r_Wi0GYAAAAJ&view_op=list_works&sortby=pubdate">
-        <img alt="Google" src="images/google_scholar_logo.png" style="margin-right: -6px; width: 29px; height: 29px;"/></a> 
+        <img alt="Google" src="images/google_scholar_logo.png" style="margin-right: -10px; width: 29px; height: 29px;"/></a> 
 
         <a href="https://dblp.org/pid/208/6990.html" target="_blank" title="DBLP Account">
-        <img alt="DBLP" src="images/dblp_logo.png" style=" margin-left: -1px; width: 38px; height: 32px;"/></a>
+        <img alt="DBLP" src="images/dblp_logo.png" style=" margin-left: 4px; width: 38px; height: 32px;"/></a>
 
         <a title="SemanticScholar Account" target="_blank" href="https://www.semanticscholar.org/author/rrezarta-krasniqi/29449864">
-        <img alt="SemanticScholar" src="images/sem_logo.png" style="margin-left: -2px; width: 32px; height: 30px;"/></a> 
+        <img alt="SemanticScholar" src="images/sem_logo.png" style="margin-left: -5px; width: 32px; height: 30px;"/></a> 
 
        <a title="ORCiD ID Account" target="_blank" href="https://orcid.org/0000-0001-6884-6131">
-        <img alt="ORCiD ID" src="images/id_logo.png" style="margin-left: 2px; width: 28px; height: 28px;"/></a>
+        <img alt="ORCiD ID" src="images/id_logo.png" style="margin-left: -1px; width: 28px; height: 28px;"/></a>
 
         <a title="ResearchGate Account" target="_blank" href="https://www.researchgate.net/profile/rrezarta_krasniqi">
-        <img alt="ResearchGate" src="images/researchgate_logo.png" style="margin-left: 9px; width: 28px;  height: 27.5px;" /></a>
+        <img alt="ResearchGate" src="images/researchgate_logo.png" style="margin-left: 5px; width: 28px;  height: 27.5px;" /></a>
 
         <a title="LinkedIn Account" target="_blank" href="https://www.linkedin.com/in/rrezartakrasniqi">
-        <img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: 10px; width: 28px; height: 28px;"/></a>
+        <img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: 5px; width: 28px; height: 28px;"/></a>
 
         <a href="https://twitter.com/rr_krasniqi" target="_blank" title="Twitter Account">
-        <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 9px; width: 28px; height: 28.5px;"/></a></p>
+        <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 2px; width: 35px; height: 30.5px;"/></a></p>
 	
       </div>
 
