--- a/publications/all_publications.html
+++ b/publications/all_publications.html
@@ -4,7 +4,7 @@
 <base target="frame1">
 <title>Rrezarta Krasniqi | Publications </title>
 <link type="text/css" href="../styles.css" rel="stylesheet" />
-<link href="../images/r.k_icon.png" type="image/x-icon" rel="shortcut icon"/>
+<link rel="shortcut icon" href="images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
 </head>
 
 <body>
