--- a/research/current_projects/detecting_tangled_quality_concerns.html
+++ b/research/current_projects/detecting_tangled_quality_concerns.html
@@ -3,7 +3,7 @@
 <head>
 <title>Rrezarta Krasniqi | Project</title>
 <link rel="stylesheet" href="../../styles.css" type="text/css" />
-<link href="../../images/r.k_icon.png" type="image/x-icon" rel="shortcut icon" />
+<link rel="shortcut icon" href="images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
 </head>
 
 <body>
