--- a/research/past_projects/enhancing_refactoring_explanations_project.html
+++ b/research/past_projects/enhancing_refactoring_explanations_project.html
@@ -3,7 +3,7 @@
 <head>
 <title>Rrezarta Krasniqi | Project</title>
 <link rel="stylesheet" href="../../styles.css" type="text/css" />
-<link rel="shortcut icon" type="image/x-icon" href="../../images/r.k_icon.png" />
+<link rel="shortcut icon" href="images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
 </head>
 
 <body>
