--- a/awards/awards.html
+++ b/awards/awards.html
@@ -3,7 +3,7 @@
 <head>
 <title>Rrezarta Krasniqi | Awards </title>
 <link rel="stylesheet" href="../styles.css" type="text/css"/>
-<link rel="shortcut icon" href="images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
+<link rel="shortcut icon" href=../images/r.k_icon.ico title="Rrezarta Krasniqi"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
