--- a/service/service.html
+++ b/service/service.html
@@ -3,7 +3,7 @@
 <head>
 <title>Rrezarta Krasniqi | Service </title>
 <link rel="stylesheet" href="../styles.css" type="text/css" />
-<link rel="shortcut icon" href="images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
+<link rel="shortcut icon" href=../images/r.k_icon.ico title="Rrezarta Krasniqi"/>
 </head>
 
 <body>
