--- a/publications/all_publications.html
+++ b/publications/all_publications.html
@@ -3,8 +3,8 @@
 <head>
 <base target="frame1">
 <title>Rrezarta Krasniqi | Publications </title>
-<link type="text/css" href="../styles.css" rel="stylesheet" />
-<link rel="shortcut icon" href=../images/r.k_icon.ico title="Rrezarta Krasniqi"/>
+<link type="text/css" href="../styles.css" rel="stylesheet"/>
+<link rel="shortcut icon" href="../images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
 </head>
 
 <body>
