--- a/research/current_past_projects.html
+++ b/research/current_past_projects.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Rrezarta Krasniqi | Research</title>
-<link type="text/css" href="../styles.css" rel="stylesheet" />
-<link rel="shortcut icon" href=../images/r.k_icon.ico title="Rrezarta Krasniqi"/>
+<link type="text/css" href="../styles.css" rel="stylesheet"/>
+<link rel="shortcut icon" href="../images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
 </head>
 <body>
 <div id="wrap">
