--- a/research/current_projects/quality_concerns_explained.html
+++ b/research/current_projects/quality_concerns_explained.html
@@ -3,7 +3,7 @@
 <head>
 <title>Rrezarta Krasniqi | Project</title>
 <link type="text/css" href="../../styles.css" rel="stylesheet" />
-<link rel="shortcut icon" href=../../images/r.k_icon.ico title="Rrezarta Krasniqi"/>
+<link rel="shortcut icon" href="../../images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
 </head>
 
 <body>
