--- a/service/service.html
+++ b/service/service.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Rrezarta Krasniqi | Service </title>
-<link rel="stylesheet" href="../styles.css" type="text/css" />
-<link rel="shortcut icon" href=../images/r.k_icon.ico title="Rrezarta Krasniqi"/>
+<link rel="stylesheet" href="../styles.css" type="text/css"/>
+<link rel="shortcut icon" href="../images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
 </head>
 
 <body>
@@ -57,7 +57,7 @@
       <strong><font color="005035">Invited Program Committee</font></strong><br><br>
 		
       <ul>
-		<li><em>PC Member (Research Track)</em>, International Conference on Software Architecture (ICSA'24)</li>
+		    <li><em>PC Member (Research Track)</em>, International Conference on Software Architecture (ICSA'25)</li>
         <li><em>PC Member (Artifact Evaluation Track)</em>, International Conference on Software Engineering (ICSE'24)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'24)</li>
         <li><em>PC Member (Tool Demonstration Track)</em>, International Joint Conference (ISSTA'24/ECOOP'24)</li>
