--- a/talks/talks.html
+++ b/talks/talks.html
@@ -3,7 +3,7 @@
 <head>
 <title>Rrezarta Krasniqi | Talks </title>
 <link rel="stylesheet" href="../styles.css" type="text/css"/>
-<link rel="shortcut icon" href=../images/r.k_icon.ico title="Rrezarta Krasniqi"/>
+<link rel="shortcut icon" href="../images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
 </head>
 
 <body>
