--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Rrezarta Krasniqi | Teaching</title>
-<link rel="stylesheet" href="../styles.css" type="text/css" />
-<link rel="shortcut icon" href=../images/r.k_icon.ico title="Rrezarta Krasniqi"/>
+<link rel="stylesheet" href="../styles.css" type="text/css"/>
+<link rel="shortcut icon" href="../images/r.k_icon.ico" title="Rrezarta Krasniqi"/>
 </head>
 
 <body>
