--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -53,10 +53,9 @@
     
       <ul>
         <li>
-          <div class="dropdown"> ITIS3300-Software Requirements and Project Management, Fall 2024
+          <div class="dropdown"> ITIS3300-Software Requirements and Project Management, Fall 2024 [<a href="../teaching/current_courses/ITIS.3300-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/ITIS.3300-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]
             <div class="dropdown-content">
-              <p class="border"><strong><i>Course Description.</i></strong> 
-                Introduction to requirement engineering and project management 
+              <p class="border"><strong><em>Course Description.</em></strong> Introduction to requirement engineering and project management 
                 methodologies. Topics include: requirements elicitation, 
                 specification, and validation; structural, informational, 
                 behavioral, security, privacy, and computer user interface 
