--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
 		
       <li class="selected"><a target="_top" title="teaching" href="teaching/teaching.html"
-              onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
+      onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
 		
       <li class="selected"><a target="_top" title="awards" href="awards/awards.html"
       onmouseout="this.style.color='#005035'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
@@ -50,7 +50,7 @@
       <h3>Home</h3>
       <br>
 		
-      <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. My research centers on detecting quality-related bugs, and I build tools and techniques to improve and contextualize the understanding of complex, system-wide quality issues such as security, usability, and reliability stemming from long-term maintenance efforts.</p>
+	  <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. My research centers on detecting quality-related bugs, and I build tools and techniques to improve and contextualize the understanding of complex, system-wide quality issues such as security, usability, and reliability stemming from long-term maintenance efforts.</p>
 
        <p>Additionally, I promote robust and effective empirical methodologies to enhance software quality. To learn more about my research, you can explore my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>.</p> 
 
@@ -59,6 +59,10 @@
       
       <p>I hold a B.S. degree in Mathematics and Computer Science from the University of Prishtina, an M.S. degree in Computer Science from Midwestern State University, another M.S. degree in Computer Science and Engineering from the University of Notre Dame, and a Ph.D. in Computer Science and Engineering from the University of North Texas.</p>
    
+	  <p style="color: darkgreen;"><strong>Announcement</strong>: Are you looking for an opportunity to pursue a Ph.D. and engage in impactful research? </p>
+		
+	  <p class="border" style="color: darkgreen;">I have Ph.D. student positions available. If you have strong technical skills and a solid background in Software Engineering, Code Program Analysis, and Artificial Intelligence (AI)/Machine Learning (ML), please complete this <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSUcj6zHIcRaD9Hj5rsstEHeWkTmaWIFrYp-W92XO94cm43g/viewform?usp=sharing" style="color:darkgreen"><strong>survey</strong></a>. Once you’ve completed it, feel free to contact Dr. Krasniqi with any questions or for further information.</p>
+
     </div>
 
     <div class="sidebar">
