--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       
       <p>I hold a B.S. degree in Mathematics and Computer Science from the University of Prishtina, an M.S. degree in Computer Science from Midwestern State University, another M.S. degree in Computer Science and Engineering from the University of Notre Dame, and a Ph.D. in Computer Science and Engineering from the University of North Texas.</p>
    
-	  <p style="color: darkgreen;"><strong>Announcement</strong>: Are you looking for an opportunity to pursue a Ph.D. and engage in impactful research? </p>
+	  <p style="color: darkgreen;"><strong>Announcement!</strong> Are you looking for an opportunity to pursue a Ph.D. and engage in impactful research? </p>
 		
 	  <p class="border" style="color: darkgreen;">I have Ph.D. student positions available. If you have strong technical skills and a solid background in Software Engineering, Code Program Analysis, and Artificial Intelligence (AI)/Machine Learning (ML), please complete this <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSUcj6zHIcRaD9Hj5rsstEHeWkTmaWIFrYp-W92XO94cm43g/viewform?usp=sharing" style="color:darkgreen"><strong>survey</strong></a>. Once you’ve completed it, feel free to contact Dr. Krasniqi with any questions.</p>
 
