--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    
 	  <p style="color: darkgreen;"><strong>Announcement!</strong> Are you looking for an opportunity to pursue a Ph.D. and engage in impactful research? </p>
 		
-	  <p class="border" style="color: darkgreen;">Here at UNC Charlotte, we have Ph.D. student positions available. If you have strong technical skills and a solid background in Software Engineering, Code Program Analysis, and AI/ML, please complete this <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSUcj6zHIcRaD9Hj5rsstEHeWkTmaWIFrYp-W92XO94cm43g/viewform?usp=sharing" style="color:darkgreen"><strong>survey</strong></a>. Once you’ve completed it, feel free to contact Dr. Krasniqi with any questions.</p>
+	  <p class="border" style="color: darkgreen;">Here at UNC Charlotte, we have Ph.D. student positions available. If you have strong technical skills and a solid background in Software Engineering, Code Analysis, and/or AI/ML, please complete this <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSUcj6zHIcRaD9Hj5rsstEHeWkTmaWIFrYp-W92XO94cm43g/viewform?usp=sharing" style="color:darkgreen"><strong>survey</strong></a>. Once you’ve completed it, feel free to contact Dr. Krasniqi with any questions.</p>
 
     </div>
 
