--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
     <p>Prior to joining UNC Charlotte, I taught Computer Science courses at various institutions, covering both undergraduate and graduate levels. I also worked in industry as a senior Java developer for over three years, contributing to the development and maintenance of various web-based applications.</p>
     
-    <p>I hold a B.S. degree in Mathematics & Computer Science from the University of Prishtina, an M.S. degree in Computer Science from Midwestern State University, an M.S. degree in Computer Science & Engineering from the University of Notre Dame, and a Ph.D. in Computer Science & Engineering from the University of North Texas.</p>
+    <p>I hold a B.S. in Mathematics and Computer Science from the University of Prishtina, an M.S. in Computer Science from Midwestern State University, an M.S. in Computer Science and Engineering from the University of Notre Dame, and a Ph.D. in Computer Science and Engineering from the University of North Texas.</p>
  
     <p style="color: darkgreen;"><strong>Announcement!</strong> Are you looking for an opportunity to pursue a Ph.D. and engage in impactful research? </p>
 		
-	<p class="border" style="color: darkgreen;">Here at UNC Charlotte, we have Ph.D. student positions available. If you have strong technical skills and a solid background in Software Engineering, Code Analysis, and/or AI/ML, please complete this <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfSUcj6zHIcRaD9Hj5rsstEHeWkTmaWIFrYp-W92XO94cm43g/viewform?usp=sharing" style="color:darkgreen"><strong>survey</strong></a>. Once you’ve completed it, feel free to contact Dr. Krasniqi with any questions.</p>
+	  <p class="border" style="color: darkgreen;">Here at UNC Charlotte, we have Ph.D. student positions available. If you have strong technical skills and a solid background in Software Engineering, Code Analysis, and/or AI/ML, please complete this <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfSUcj6zHIcRaD9Hj5rsstEHeWkTmaWIFrYp-W92XO94cm43g/viewform?usp=sharing" style="color:darkgreen"><strong>survey</strong></a>. Once you’ve completed it, feel free to contact Dr. Krasniqi with any questions.</p>
 
     </div>
 
