--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 
         <a href="https://twitter.com/rr_krasniqi" target="_blank" title="Twitter Account">
         <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 2px; width: 35px; height: 30.5px;"/></a></p>
-	
-     
+	   </div>
 
      <div class="footer">
      <p>Copyright &copy; Rrezarta Krasniqi</p>
