--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		
 	  <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. My research centers on detecting quality-related bugs, and I build tools and techniques to improve and contextualize the understanding of complex, system-wide quality issues such as security, usability, and reliability stemming from long-term maintenance efforts.</p>
 
-    <p>Additionally, I incorporate robust and effective empirical methodologies to enhance software quality. To learn more about my research, you can explore my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>.</p> 
+    <p>Additionally, I incorporate robust and effective empirical methodologies to enhance software quality. To learn more about my research, you can explore my <a target="_blank" href="https://drive.google.com/file/d/1nOH1GmxM6d92n3CWylN9SGbvmOX50bd_/view?usp=sharing">dissertation</a>.</p> 
 
     <p>Prior to joining UNC Charlotte, I taught Computer Science courses at various institutions, covering both undergraduate and graduate levels. I also worked in industry as a senior Java developer for over three years, contributing to the development and maintenance of various web-based applications.</p>
     
