--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <h3>Home</h3>
       <br>
 		
-	  <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. My research centers on detecting quality-related bugs, and I build tools and techniques to improve and contextualize the understanding of complex, system-wide quality issues such as security, usability, and reliability stemming from long-term maintenance efforts.</p>
+	  <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. My research aims to improve software quality by detecting and addressing quality-related bugs, particularly those that arise from long-term maintenance efforts. I develop tools and techniques to gain a deeper understanding of complex, system-wide quality issues, including security, usability, and reliability through code analysis, program comprehension, and AI-driven approaches. 
 
-    <p>Additionally, I incorporate robust and effective empirical methodologies to enhance software quality. To learn more about my research, you can explore my <a target="_blank" href="https://drive.google.com/file/d/1nOH1GmxM6d92n3CWylN9SGbvmOX50bd_/view?usp=sharing">dissertation</a>.</p> 
+    <p>Additionally, I incorporate effective empirical methodologies to enhance software quality. By combining technical depth with and empirical research, I aim to contribute to the development of more reliable and robust software systems. To learn more about my research, you can explore my <a target="_blank" href="https://drive.google.com/file/d/1nOH1GmxM6d92n3CWylN9SGbvmOX50bd_/view?usp=sharing">dissertation</a>.</p> 
 
     <p>Prior to joining UNC Charlotte, I taught Computer Science courses at various institutions, covering both undergraduate and graduate levels. I also worked in industry as a senior Java developer for over three years, contributing to the development and maintenance of various web-based applications.</p>
     
