--- a/service/service.html
+++ b/service/service.html
@@ -49,6 +49,7 @@
       <strong><font color="005035">Invited Journal Reviewer</font></strong><br><br>
 		
       <ul>
+        <li><em>Reviewer</em>, Empirical Software Engineering Journal (EMSE)</li>
         <li><em>Reviewer</em>, Software Quality Journal</li>
         <li><em>Reviewer</em>, Journal for Software: Evolution and Process</li>
         <li><em>Reviewer</em>, Journal for Software: Testing Verification and Reliability</li>
