--- a/service/service.html
+++ b/service/service.html
@@ -58,6 +58,8 @@
       <strong><font color="005035">Invited Program Committee</font></strong><br><br>
 		
       <ul>
+
+        <li><em>PC Member (Research Track)</em>, International Conference on Software Engineering (ICSE'26)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Maintenance and Evolution (ICSME'25)</li>
 		    <li><em>PC Member (Research Track)</em>, International Conference on Software Architecture (ICSA'25)</li>
 		    <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'23-EASE'25)</li> 
