--- a/service/service.html
+++ b/service/service.html
@@ -63,7 +63,7 @@
         <li><em>PC Member (Research Track)</em>, International Conference on Software Maintenance and Evolution (ICSME'25)</li>
 		    <li><em>PC Member (Research Track)</em>, International Conference on Software Architecture (ICSA'25)</li>
 		    <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'23-EASE'25)</li> 
-        <li><em>PC Member (Tool Demonstration Track)</em>, International Symposium on Software Testing & Analysis (ISSTA'25)</li>
+        <li><em>PC Member (Tool Demonstration Track)</em>, International Symposium on Software Testing and Analysis (ISSTA'25)</li>
         <li><em>PC Member (Tool Demonstration Track)</em>, International Joint Conference (ISSTA'24/ECOOP'24)</li>
         <li><em>PC Member (Artifact Evaluation Track)</em>, International Conference on Software Engineering (ICSE'24)</li>
         <li><em>PC Member (Research Track)</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'24)</li>
@@ -123,7 +123,7 @@
 		
     </div>
     <div class="footer">
-      <p>Copyright  &copy; Rrezarta Krasniqi</p>
+      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
   </div>
 </div>
