--- a/service/service.html
+++ b/service/service.html
@@ -61,7 +61,7 @@
 		
       <ul>
         <li><em>Reviewer</em>, Empirical Software Engineering Journal (EMSE)</li>
-        <li><em>Reviewer</em>, ournal of Systems and Software (JSS)</li>
+        <li><em>Reviewer</em>, Journal of Systems and Software (JSS)</li>
         <li><em>Reviewer</em>, Software Quality Journal (SQJ)</li>
         <li><em>Reviewer</em>, Journal for Software: Evolution and Process (JSEP)</li>
         <li><em>Reviewer</em>, Journal for Software: Testing Verification and Reliability (JSTVR)</li>
