--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -52,7 +52,18 @@
     <strong><font color="005035">Instructor</font></strong><br><br>
 
       <ul>
-         <li>
+		  <li>
+          <div class="dropdown">ITI6880-Individual Study, Spring 2025
+            <div class="dropdown-content">
+              <p class="border"><strong><em>Course Description.</em></strong> 
+                With the direction of a faculty member, students plan and implement 
+				        appropriate objectives and learning activities to develop specific 
+				        areas of expertise through research, reading, and individual projects.</p>
+            </div>
+          </div>
+        </li>
+		  
+         <!--<li>
           <div class="dropdown">ITIS6010/8010-Software Engineering for AI-Enabled Systems, Spring 2025 [<a href="../teaching/current_courses/spring_25/ITIS.6010-8010-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/spring_25/ITIS.6010-8010-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]
             <div class="dropdown-content">
               <p class="border"><strong><em>Course Description.</em></strong> 
@@ -69,10 +80,10 @@
                 design considerations, and thorough system-level testing.</p>
             </div>
           </div>
-        </li>
+        </li>-->
 
         <li>
-          <div class="dropdown">ITIS3300-Software Requirements and Project Management, Fall 2024 [<a href="../teaching/current_courses/fall_24/ITIS.3300-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/fall_24/ITIS.3300-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]
+          <div class="dropdown">ITIS3300-Software Requirements and Project Management, Fall 2024 <!--[<a href="../teaching/current_courses/fall_24/ITIS.3300-Syllabus.pdf" target="_blank">Course Syllabus</a>] [<a href="../teaching/current_courses/fall_24/ITIS.3300-CourseSchedulePlan.pdf" target="_blank">Course Schedule and Plan</a>]-->
             <div class="dropdown-content">
               <p class="border"><strong><em>Course Description.</em></strong> 
                 Introduction to requirement engineering and project management 
